exports[`Lets user set options asyncTypes 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_one-request-suffix",
        "promise": Object {
          "fulfillmentValue": "fullfilled!",
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_one-pending-SUFF",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_one-request-suffix",
        "promise": Object {
          "fulfillmentValue": "fullfilled!",
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_one-request-suffix",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_one-request-suffix",
        "promise": Object {
          "fulfillmentValue": "fullfilled!",
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": "fullfilled!",
    "type": "ACTION_onefulfilledsuFf",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_one-request-suffix",
        "promise": Object {
          "fulfillmentValue": "fullfilled!",
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": "fullfilled!",
    "type": "ACTION_one_END",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "1-@@ASYNC_FLOW--ACTION_two-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_two-pending-SUFF",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "1-@@ASYNC_FLOW--ACTION_two-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_two-request-suffix",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "1-@@ASYNC_FLOW--ACTION_two-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: rejected!],
    "type": "ACTION_two____rejected___-",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "1-@@ASYNC_FLOW--ACTION_two-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: rejected!],
    "type": "ACTION_two_END",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "2-@@ASYNC_FLOW--ACTION_three-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_three-pending-SUFF",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "2-@@ASYNC_FLOW--ACTION_three-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_three-request-suffix",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "2-@@ASYNC_FLOW--ACTION_three-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: aborted!],
    "type": "ACTION_three--__aborted-ab",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "2-@@ASYNC_FLOW--ACTION_three-request-suffix",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: aborted!],
    "type": "ACTION_three_END",
  },
]
`;

exports[`Lets user set options generateId 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "ACTION_REQUEST-2000",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "ACTION_REQUEST-2000",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "ACTION_REQUEST-2001",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "ACTION_REQUEST-2001",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "ACTION_REQUEST-2002",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "ACTION_REQUEST-2002",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Lets user set options global request timeout 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 5000,
        "timeoutRequest": 5000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 5000,
        "timeoutRequest": 5000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Lets user set options metaKey 1`] = `
Array [
  Object {
    "meta": Object {
      "Custom-Meta-Key": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "Custom-Meta-Key": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "meta": Object {
      "Custom-Meta-Key": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_FULFILLED",
  },
  Object {
    "meta": Object {
      "Custom-Meta-Key": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_END",
  },
]
`;

exports[`Lets user set options metaKeyRequestID 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "Custom-Meta-REQUEST-ID-Key": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "Custom-Meta-REQUEST-ID-Key": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "Custom-Meta-REQUEST-ID-Key": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_FULFILLED",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "Custom-Meta-REQUEST-ID-Key": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_END",
  },
]
`;

exports[`Lets user set options per request timeout 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 2500,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 2500,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware action with REQUEST suffix will have PENDING and REQUEST dispatched 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware actions that does not match suffix will pass through 1`] = `
Array [
  Object {
    "type": "ACTION",
  },
]
`;

exports[`Middleware can be disabled, the action simply passes through 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "enable": false,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware handle _ABORTED correctly with payload 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware handle _ABORTED correctly with payload 2`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: Aborted!],
    "type": "ACTION_ABORTED",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Aborted!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: Aborted!],
    "type": "ACTION_END",
  },
]
`;

exports[`Middleware handle _FULFILLED correctly with payload 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware handle _FULFILLED correctly with payload 2`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_FULFILLED",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_END",
  },
]
`;

exports[`Middleware handle _REJECTED correctly with payload 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware handle _REJECTED correctly with payload 2`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: Rejected!],
    "type": "ACTION_REJECTED",
  },
  Object {
    "error": true,
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": undefined,
          "isFulfilled": false,
          "isRejected": true,
          "rejectionReason": [Error: Rejected!],
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": [Error: Rejected!],
    "type": "ACTION_END",
  },
]
`;

exports[`Middleware observers works as expected 1`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_FULFILLED",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_END",
  },
]
`;

exports[`Middleware observers works as expected 2`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_FULFILLED",
  },
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_END",
  },
]
`;

exports[`Middleware observers works as expected 3`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware observers works as expected 4`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "type": "ACTION_REQUEST",
  },
]
`;

exports[`Middleware observers works as expected 5`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_END",
  },
]
`;

exports[`Middleware observers works as expected 6`] = `
Array [
  Object {
    "meta": Object {
      "asyncFlow": Object {
        "REQUEST_ID": "0-@@ASYNC_FLOW--ACTION_REQUEST",
        "promise": Object {
          "fulfillmentValue": Object {
            "data": 1,
            "even_more_data": Object {
              "key": "value",
            },
            "more_data": Array [
              1,
              2,
              3,
            ],
          },
          "isFulfilled": true,
          "isRejected": false,
          "rejectionReason": undefined,
        },
        "timeout": 10000,
        "timeoutRequest": 10000,
      },
    },
    "payload": Object {
      "data": 1,
      "even_more_data": Object {
        "key": "value",
      },
      "more_data": Array [
        1,
        2,
        3,
      ],
    },
    "type": "ACTION_END",
  },
]
`;
